--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>imp_exp_refact</name>
 	<description>refactoring of imp_exp till Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.5.6</version>
 		</dependency>
 	</dependencies>
 
