--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.5.6</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.2</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
