business - clean adding and counting imp_exp - default block UTs - import tests counting results

--- a/src/main/java/com/imp_exp/refact/basicModel/imp_exp.ini
+++ b/src/main/java/com/imp_exp/refact/basicModel/imp_exp.ini
@@ -21,10 +21,10 @@ ItemPath=externalData/items/
 Order=Y
 OrderPath=externalData/documents/orders/
 
-Delivery=Y
+Delivery=N
 DeliveryPath=externalData/documents/deliveries/
 
-Invoice=Y
+Invoice=N
 InvoicePath=externalData/documents/invoices/
 
 [Export]
