Import - move partner to archive * add iniKeys archive + error UTs - partner.xml file moving test

--- a/src/main/java/com/imp_exp/refact/basicModel/imp_exp.ini
+++ b/src/main/java/com/imp_exp/refact/basicModel/imp_exp.ini
@@ -14,18 +14,28 @@ Pwd=thePassword
 [Import]
 Partner=Y
 PartnerPath=externalData/partners/
+PartnerArchivePath=externalData/partners/archive/
+PartnerErrorPath=externalData/partners/error/
 
 Item=Y
 ItemPath=externalData/items/
+ItemArchivePath=externalData/items/archive/
+ItemErrorPath=externalData/items/error/
 
 Order=Y
 OrderPath=externalData/documents/orders/
+OrderArchivePath=externalData/documents/orders/archive/
+OrderErrorPath=externalData/documents/orders/error/
 
 Delivery=N
 DeliveryPath=externalData/documents/deliveries/
+DeliveryArchivePath=externalData/documents/deliveries/archive/
+DeliveryErrorPath=externalData/documents/deliveries/error/
 
 Invoice=N
 InvoicePath=externalData/documents/invoices/
+InvoiceArchivePath=externalData/documents/invoices/archive/
+InvoiceErrorPath=externalData/documents/invoices/error/
 
 [Export]
 Partner=N
