basicModel - IniKeys ProgramStop + manipulators

--- a/src/main/java/com/imp_exp/refact/basicModel/imp_exp.ini
+++ b/src/main/java/com/imp_exp/refact/basicModel/imp_exp.ini
@@ -5,11 +5,20 @@
 [Section]
 Key=Value
 
+[Settings]
+ProgramStop=N
+
 [Connection]
 Server=someServer
 Database=theCompany
 User=aUser
 Pwd=thePassword
+
+[ImportSettings]
+ChangePartner=Y
+ChangePartnerObjectTypes=17
+ChangeItem=Y
+ChangeItemObjectTypes=17
 
 [Import]
 Partner=Y
